Changed Background Base Colour to Black, Fixed Flickering on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
     --darkPrimaryColour: #280749;
     --secondaryColour: #00D0FE;
     --background: url('./assets/images/bkg.svg');
+    --backgroundColour: white; 
   }
 
   .partner-wrapper { 
@@ -30,16 +31,17 @@
     --darkPrimaryColour: #280749;
     --secondaryColour: #00D0FE;
     --background: url('./assets/images/bkgdark.svg'); 
+    --backgroundColour: black; 
   }
 
   .partner-wrapper { 
-    border: 3px solid var(--lightPrimaryColour); 
-    border-radius: 10px; 
+    border: 3px solid var(--secondaryColour); 
+    border-radius: 15px; 
     background-color: rgba(255, 255, 255, 1);
   }
   
   #partner-heading {
-    border-bottom: none; 
+    border-bottom: none;
   }
 
 }
@@ -81,6 +83,7 @@ input:focus {
 }
 
 #root {
+  background-color: var(--backgroundColour); 
   background-image: var(--background); 
   background-size: cover;
   background-position: bottom;
@@ -122,7 +125,7 @@ input:focus {
 .nav-item {
   cursor: pointer; 
   color: var(--textColour);
-  margin-right: 30px; 
+ 
   border-bottom: var(--darkPrimaryColour) 2px solid;  
   text-align: right; 
 }
